k8s/applications/utils/element-admin/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element-admin
  namespace: element-admin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element-admin
      app.kubernetes.io/version: git
      app.kubernetes.io/component: matrix-client
      app.kubernetes.io/part-of: element-admin
      # app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: element-admin
      labels:
        app.kubernetes.io/name: element-admin
        app.kubernetes.io/version: git
        app.kubernetes.io/component: matrix-client
        app.kubernetes.io/part-of: element-admin
        # app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: element-admin
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: element-admin
          # Dockerfile: https://github.com/element-hq/element-admin/blob/main/Dockerfile
          image: ghcr.io/sebastka/element-admin:2026.9.23@sha256:94176bd789cd295f6b1a34a5f1371875d0a95a503746e74554e4004dc6120804
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 24Mi}
            limits: {memory: 128Mi}
          ports:
            - {name: http, protocol: TCP, containerPort: 8080}
          startupProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 2, periodSeconds: 10, failureThreshold: 3}
          livenessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          readinessProbe: {httpGet: {port: 8080, path: /}, initialDelaySeconds: 10, periodSeconds: 120}
          volumeMounts:
            - {name: tmp-volume, mountPath: /tmp}
      volumes:
        - {name: tmp-volume, emptyDir: {}}
