k8s/applications/utils/element-admin/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: element-admin
spec:
  parentRefs:
    - {namespace: gateway, name: default, sectionName: https-wc-karlsen-app}
  hostnames: [element-admin.karlsen.app]
  rules:
    - matches: [path: {type: PathPrefix, value: /}]
      backendRefs: [{name: web, kind: Service, port: 80}]
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              # - {name: Access-Control-Allow-Origin, value: '*'}
              - {name: Content-Security-Policy, value: "default-src 'self'; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; script-src-elem 'self' 'unsafe-inline'; style-src-elem 'self' 'unsafe-inline'; img-src 'self' data: blob:; connect-src 'self' https://karlsen.fr https://mas.karlsen.fr https://matrix.karlsen.fr https://api.github.com;"}
              - {name: Strict-Transport-Security, value: 'max-age=31536000; includeSubDomains; preload'}
              - {name: X-Content-Type-Options, value: nosniff}
              - {name: X-Frame-Options, value: DENY}
              - {name: Cross-Origin-Resource-Policy, value: same-origin}
              - {name: Cross-Origin-Embedder-Policy, value: require-corp}
              - {name: Cross-Origin-Opener-Policy, value: same-origin}
              - {name: Referrer-Policy, value: no-referrer}
              - {name: Permissions-Policy, value: 'accelerometer=(), autoplay=(), camera=(), encrypted-media=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()'}
              # - {name: Integrity-Policy, value: 'blocked-destinations=(style),sources=(inline)'}
              # - {name: Reporting-Endpoints, value: ''}
